--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
             <p class="article__text">Aktualnie uczę się programoawania uczestnicząc w kursie "youcode". Zanim pochwalę się
                 osiągnięciami w tej
-                dziedzinie polecam odwiedzić moją stronę opisującą
+                dziedzinie, polecam odwiedzić moją stronę opisującą
                 <a class="article__link" href="https://mariuszmmm.github.io/bieszczady/">ciekawe miejsca w Bieszczadach.</a>
             </p>
         </article>
