--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
     <script defer src="js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 </head>
 
 <body class="body">
-    <div class="body__container">
-        <article class="article__container">
-            <img class="foto" width="100" height="100" src="images/foto.jpg" alt="Moje_zdjęcie">
-            <h1 class="article__header article__header--main">O mnie</h1>
-            <h2 class="article__header">Dane podstawowe:</h2>
-            <p class="article__text">Nazywam się Mariusz Matusiewicz, mam 43 lata i mieszkam w Przemyślu.
-            </p>
-            <h2 class="article__header">Edukacja i praca:</h2>
-            <p class="article__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w handlu.
-            </p>
-            <h2 class="article__header">Zainteresowania:</h2>
-            <p class="article__text">Elektronika pozostała moim hobby, a oprócz tego zajmowałem się amatorsko wideofilmowaniem i
-                montażem
-                wideo.
-                Aktualnie interesuję się systemem automatyki domowej Fibaro.
-            </p>
-            <h2 class="article__header">Wypoczynek:</h2>
-            <p class="article__text">Lubię wędrówki po górach, często bywam w Bieszczadach, gdyż to bardzo urokliwe miejsce.
-            </p>
-            <p class="article__text">Aktualnie uczę się programoawania uczestnicząc w kursie "youcode". Zanim pochwalę się
-                osiągnięciami w tej
-                dziedzinie, polecam odwiedzić moją stronę opisującą
-                <a class="article__link" href="https://mariuszmmm.github.io/bieszczady/">ciekawe miejsca w Bieszczadach.</a>
-            </p>
-        </article>
-    </div>
+    <article class="article__container">
+        <img class="foto" width="100" height="100" src="images/foto.jpg" alt="Moje_zdjęcie">
+        <h1 class="article__header article__header--main">O mnie</h1>
+        <h2 class="article__header">Dane podstawowe:</h2>
+        <p class="article__text">Nazywam się Mariusz Matusiewicz, mam 43 lata i mieszkam w Przemyślu.
+        </p>
+        <h2 class="article__header">Edukacja i praca:</h2>
+        <p class="article__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w
+            handlu.
+        </p>
+        <h2 class="article__header">Zainteresowania:</h2>
+        <p class="article__text">Elektronika pozostała moim hobby, a oprócz tego zajmowałem się amatorsko
+            wideofilmowaniem i
+            montażem
+            wideo.
+            Aktualnie interesuję się systemem automatyki domowej Fibaro.
+        </p>
+        <h2 class="article__header">Wypoczynek:</h2>
+        <p class="article__text">Lubię wędrówki po górach, często bywam w Bieszczadach, gdyż to bardzo urokliwe miejsce.
+        </p>
+        <p class="article__text">Aktualnie uczę się programoawania uczestnicząc w kursie "youcode". Zanim pochwalę się
+            osiągnięciami w tej
+            dziedzinie, polecam odwiedzić moją stronę opisującą
+            <a class="article__link" href="https://mariuszmmm.github.io/bieszczady/">ciekawe miejsca w Bieszczadach.</a>
+        </p>
+    </article>
 </body>
 
 </html>
