--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/section.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,32 +19,32 @@
 </head>
 
 <body class="body">
-    <article class="article__container">
-        <img class="foto" width="100" height="100" src="images/foto.jpg" alt="Moje_zdjęcie">
-        <h1 class="article__header article__header--main">O mnie</h1>
-        <h2 class="article__header">Dane podstawowe:</h2>
-        <p class="article__text">Nazywam się Mariusz Matusiewicz, mam 43 lata i mieszkam w Przemyślu.
+    <section class="section__container">
+        <img class="section__foto" width="100" height="100" src="images/foto.jpg" alt="Moje_zdjęcie">
+        <h1 class="section__header section__header--main">O mnie</h1>
+        <h2 class="section__header">Dane podstawowe:</h2>
+        <p class="section__text">Nazywam się Mariusz Matusiewicz, mam 43 lata i mieszkam w Przemyślu.
         </p>
-        <h2 class="article__header">Edukacja i praca:</h2>
-        <p class="article__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w
+        <h2 class="section__header">Edukacja i praca:</h2>
+        <p class="section__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w
             handlu.
         </p>
-        <h2 class="article__header">Zainteresowania:</h2>
-        <p class="article__text">Elektronika pozostała moim hobby, a oprócz tego zajmowałem się amatorsko
+        <h2 class="section__header">Zainteresowania:</h2>
+        <p class="section__text">Elektronika pozostała moim hobby, a oprócz tego zajmowałem się amatorsko
             wideofilmowaniem i
             montażem
             wideo.
             Aktualnie interesuję się systemem automatyki domowej Fibaro.
         </p>
-        <h2 class="article__header">Wypoczynek:</h2>
-        <p class="article__text">Lubię wędrówki po górach, często bywam w Bieszczadach, gdyż to bardzo urokliwe miejsce.
+        <h2 class="section__header">Wypoczynek:</h2>
+        <p class="section__text">Lubię wędrówki po górach, często bywam w Bieszczadach, gdyż to bardzo urokliwe miejsce.
         </p>
-        <p class="article__text">Aktualnie uczę się programoawania uczestnicząc w kursie "youcode". Zanim pochwalę się
+        <p class="section__text">Aktualnie uczę się programoawania uczestnicząc w kursie "youcode". Zanim pochwalę się
             osiągnięciami w tej
             dziedzinie, polecam odwiedzić moją stronę opisującą
-            <a class="article__link" href="https://mariuszmmm.github.io/bieszczady/">ciekawe miejsca w Bieszczadach.</a>
+            <a class="section__link" href="https://mariuszmmm.github.io/bieszczady/">ciekawe miejsca w Bieszczadach.</a>
         </p>
-    </article>
+    </section>
 </body>
 
 </html>
