add english lang

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
+    <link href="css/article.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,29 +22,59 @@
 <body class="body">
     <section class="section__container">
         <img class="section__foto" width="100" height="100" src="images/foto.jpg" alt="Moje_zdjęcie">
-        <h1 class="section__header section__header--main">O mnie</h1>
-        <h2 class="section__header">Dane podstawowe:</h2>
-        <p class="section__text">Nazywam się Mariusz Matusiewicz, mam 43 lata i mieszkam w Przemyślu.
-        </p>
-        <h2 class="section__header">Edukacja i praca:</h2>
-        <p class="section__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w
-            handlu.
-        </p>
-        <h2 class="section__header">Zainteresowania:</h2>
-        <p class="section__text">Elektronika pozostała moim hobby, a oprócz tego zajmowałem się amatorsko
-            wideofilmowaniem i
-            montażem
-            wideo.
-            Aktualnie interesuję się systemem automatyki domowej Fibaro.
-        </p>
-        <h2 class="section__header">Wypoczynek:</h2>
-        <p class="section__text">Lubię wędrówki po górach, często bywam w Bieszczadach, gdyż to bardzo urokliwe miejsce.
-        </p>
-        <p class="section__text">Aktualnie uczę się programoawania uczestnicząc w kursie "youcode". Zanim pochwalę się
-            osiągnięciami w tej
-            dziedzinie, polecam odwiedzić moją stronę opisującą
-            <a class="section__link" href="https://mariuszmmm.github.io/bieszczady/">ciekawe miejsca w Bieszczadach.</a>
-        </p>
+        <button class="section__button js-button"><span class="section__buttonTextEng js-buttonTextEng">ENG</span> /
+            <span class="section__buttonTextPl js-buttonTextPl">PL</span></button>
+        <article class="section__langPl">
+            <h1 class="section__header section__header--main">O mnie</h1>
+            <h2 class="section__header">Dane podstawowe:</h2>
+            <p class="section__text">Nazywam się Mariusz Matusiewicz, mam 43 lata i mieszkam w Przemyślu.
+            </p>
+            <h2 class="section__header">Edukacja i praca:</h2>
+            <p class="section__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w
+                handlu.
+            </p>
+            <h2 class="section__header">Zainteresowania:</h2>
+            <p class="section__text">Elektronika pozostała moim hobby, a oprócz tego zajmowałem się amatorsko
+                wideofilmowaniem i
+                montażem
+                wideo.
+                Aktualnie interesuję się systemem automatyki domowej Fibaro.
+            </p>
+            <h2 class="section__header">Wypoczynek:</h2>
+            <p class="section__text">Lubię wędrówki po górach, często bywam w Bieszczadach, gdyż to bardzo urokliwe
+                miejsce.
+            </p>
+            <p class="section__text">Aktualnie uczę się programoawania uczestnicząc w kursie "youcode". Zanim pochwalę
+                się
+                osiągnięciami w tej
+                dziedzinie, polecam odwiedzić moją stronę opisującą
+                <a class="section__link" href="https://mariuszmmm.github.io/bieszczady/">ciekawe miejsca w
+                    Bieszczadach.</a>
+            </p>
+        </article>
+        <article class="section__langEng">
+            <h1 class="section__header section__header--main">About me</h1>
+            <h2 class="section__header">Basic information:</h2>
+            <p class="section__text">My name is Mariusz Matusiewicz, I'm 43 years old and I live in Przemyśl.
+            </p>
+            <h2 class="section__header">Education and work:</h2>
+            <p class="section__text">I am an electronics technician, but after finishing my education I chose a job in
+                trade.
+            </p>
+            <h2 class="section__header">Interests:</h2>
+            <p class="section__text">Electronics remained my hobby, and besides, I was an amateur videographer and video
+                editing. I am currently interested in the Fibaro home automation system.
+            </p>
+            <h2 class="section__header">Rest:</h2>
+            <p class="section__text">I like hiking in the mountains, I often visit the Bieszczady Mountains, because it
+                is a very charming place.
+            </p>
+            <p class="section__text">I am currently learning programming by taking the "youcode" course. Before I boast
+                about my achievements in this field, I recommend visiting my website describing
+                <a class="section__link" href="https://mariuszmmm.github.io/bieszczady/">interesting places in the
+                    Bieszczady Mountains.</a>
+            </p>
+        </article>
     </section>
 </body>
 
