--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <article class="section__langPl">
             <h1 class="section__header section__header--main">O mnie</h1>
             <h2 class="section__header">Dane podstawowe:</h2>
-            <p class="section__text">Nazywam się Mariusz Matusiewicz, mam 43 lata i mieszkam w Przemyślu.
+            <p class="section__text">Nazywam się <strong>Mariusz Matusiewicz</strong>, mam 43 lata i mieszkam w Przemyślu.
             </p>
             <h2 class="section__header">Edukacja i praca:</h2>
             <p class="section__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w
@@ -55,7 +55,7 @@
         <article class="section__langEng">
             <h1 class="section__header section__header--main">About me</h1>
             <h2 class="section__header">Basic information:</h2>
-            <p class="section__text">My name is Mariusz Matusiewicz, I'm 43 years old and I live in Przemyśl.
+            <p class="section__text">My name is <strong>Mariusz Matusiewicz</strong>, I'm 43 years old and I live in Przemyśl.
             </p>
             <h2 class="section__header">Education and work:</h2>
             <p class="section__text">I am an electronics technician, but after finishing my education I chose a job in
