--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body class="body">
     <section class="section__container">
         <img class="section__foto" width="100" height="100" src="images/foto.jpg" alt="Moje_zdjęcie">
-        <button class="section__button js-button"><span class="section__buttonTextEng js-buttonTextEng">ENG</span> /
+        <button class="section__button js-button"><span class="js-buttonTextEng js-buttonTextEng">ENG</span> /
             <span class="section__buttonTextPl js-buttonTextPl">PL</span></button>
-        <article class="section__langPl">
+        <article class="section__langPl js-langPl">
             <h1 class="section__header section__header--main">O mnie</h1>
             <h2 class="section__header">Dane podstawowe:</h2>
             <p class="section__text">Nazywam się <strong>Mariusz Matusiewicz</strong>, mam 43 lata i mieszkam w Przemyślu.
@@ -52,7 +52,7 @@
                     Bieszczadach.</a>
             </p>
         </article>
-        <article class="section__langEng">
+        <article class="section__langEng js-langEng">
             <h1 class="section__header section__header--main">About me</h1>
             <h2 class="section__header">Basic information:</h2>
             <p class="section__text">My name is <strong>Mariusz Matusiewicz</strong>, I'm 43 years old and I live in Przemyśl.
