--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 <body class="body">
     <section class="section__container">
         <img class="section__foto" width="100" height="100" src="images/foto.jpg" alt="Moje_zdjęcie">
-        <button class="section__button js-button"><span class="js-buttonTextEng js-buttonTextEng">ENG</span> /
-            <span class="section__buttonTextPl js-buttonTextPl">PL</span></button>
-        <article class="section__langPl js-langPl">
+        <button class="section__button js-button"><span class="section__colorActivLang js-buttonTextEng">ENG</span> /
+            <span class="js-buttonTextPl">PL</span></button>
+        <article class="section__langPl js-langPl section__hidden">
             <h1 class="section__header section__header--main">O mnie</h1>
             <h2 class="section__header">Dane podstawowe:</h2>
-            <p class="section__text">Nazywam się <strong>Mariusz Matusiewicz</strong>, mam 43 lata i mieszkam w Przemyślu.
+            <p class="section__text">Nazywam się <strong>Mariusz Matusiewicz</strong>, mam 43 lata i mieszkam w
+                Przemyślu.
             </p>
             <h2 class="section__header">Edukacja i praca:</h2>
             <p class="section__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w
@@ -55,7 +56,8 @@
         <article class="section__langEng js-langEng">
             <h1 class="section__header section__header--main">About me</h1>
             <h2 class="section__header">Basic information:</h2>
-            <p class="section__text">My name is <strong>Mariusz Matusiewicz</strong>, I'm 43 years old and I live in Przemyśl.
+            <p class="section__text">My name is <strong>Mariusz Matusiewicz</strong>, I'm 43 years old and I live in
+                Przemyśl.
             </p>
             <h2 class="section__header">Education and work:</h2>
             <p class="section__text">I am an electronics technician, but after finishing my education I chose a job in
