--- a/index.html
+++ b/index.html
@@ -34,23 +34,18 @@
             <p class="section__text">Z wykształcenia jestem elektronikiem, ale po zakończeniu edukacji wybrałem pracę w
                 handlu.
             </p>
-            <h2 class="section__header">Zainteresowania:</h2>
-            <p class="section__text">Elektronika pozostała moim hobby, a oprócz tego zajmowałem się amatorsko
-                wideofilmowaniem i
-                montażem
-                wideo.
-                Aktualnie interesuję się systemem automatyki domowej Fibaro.
-            </p>
             <h2 class="section__header">Wypoczynek:</h2>
             <p class="section__text">Lubię wędrówki po górach, często bywam w Bieszczadach, gdyż to bardzo urokliwe
                 miejsce.
             </p>
-            <p class="section__text">Aktualnie uczę się programoawania uczestnicząc w kursie "youcode". Zanim pochwalę
-                się
-                osiągnięciami w tej
-                dziedzinie, polecam odwiedzić moją stronę opisującą
-                <a class="section__link" href="https://mariuszmmm.github.io/bieszczady/">ciekawe miejsca w
-                    Bieszczadach.</a>
+            <h2 class="section__header">Zainteresowania:</h2>
+            <p class="section__text">Elektronika pozostała moim hobby, a oprócz tego zajmowałem się amatorsko
+                wideofilmowaniem i montażem wideo. Interesuję się systemem automatyki domowej Fibaro.
+            </p>
+            <p class="section__text">Aktualnie uczę się programoawania uczestnicząc w kursie "YouCode".
+                <a class="section__link" href="https://mariuszmmm.github.io/list-of-projects/">Lista moich
+                    projektów.
+                </a>
             </p>
         </article>
         <article class="section__langEng js-langEng">
@@ -63,18 +58,17 @@
             <p class="section__text">I am an electronics technician, but after finishing my education I chose a job in
                 trade.
             </p>
-            <h2 class="section__header">Interests:</h2>
-            <p class="section__text">Electronics remained my hobby, and besides, I was an amateur videographer and video
-                editing. I am currently interested in the Fibaro home automation system.
-            </p>
             <h2 class="section__header">Rest:</h2>
             <p class="section__text">I like hiking in the mountains, I often visit the Bieszczady Mountains, because it
                 is a very charming place.
             </p>
-            <p class="section__text">I am currently learning programming by taking the "youcode" course. Before I boast
-                about my achievements in this field, I recommend visiting my website describing
-                <a class="section__link" href="https://mariuszmmm.github.io/bieszczady/">interesting places in the
-                    Bieszczady Mountains.</a>
+            <h2 class="section__header">Interests:</h2>
+            <p class="section__text">Electronics remained my hobby, and besides, I was an amateur videographer and video editing. I am interested in the Fibaro home automation system.
+            </p>
+            <p class="section__text">I am currently learning programming by participating in the "YouCode" course.
+                <a class="section__link" href="https://mariuszmmm.github.io/list-of-projects/">List of my projects.
+
+                </a>
             </p>
         </article>
     </section>
